SpringCloud学习配置中心

--- a/User-Consumer-Config/src/main/resources/application.properties
+++ b/User-Consumer-Config/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 eureka.client.service-url.defaultZone=http://euk1.com:7001/eureka/
 
-server.port=92
+server.port=91
 
 spring.application.name=user-consumer
 
@@ -30,34 +30,20 @@ hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 hystrix.command.alive.execution.isolation.strategy=THREAD
 
 #zipkin 和 sleuth 配置
-#spring.zipkin.base-url=http://localhost:9411
-#spring.sleuth.sampler.rate=1
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.rate=1
 
 #配置admin的地址
-#spring.boot.admin.client.url=http://localhost:8080
+spring.boot.admin.client.url=http://localhost:8080
 #配置显示健康详细信息
-#management.endpoint.health.show-details=always
+management.endpoint.health.show-details=always
 
-#################配置中心##########
+
 #直接URL方式查找配置中心
-#spring.cloud.config.uri=http://localhost:8888/
+spring.cloud.config.uri=http://localhost:8888/
 #通过注册中心查找
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.service-id=config-center
-
-#哪个配置   [服务名]-[配置名]
+#spring.cloud.config.discovery.enabled=true
+#spring.cloud.config.discovery.service-id=a-config
 spring.cloud.config.profile=master
-#哪个分支
 spring.cloud.config.label=master
-
-#配置中心的配置
-#MyConfig="anpo chen 111"
-
-#这里只能是单个微服务的重启，可以交给配置中心去做
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-
-
 
